Add basic game progress;

--- a/app/common/components/user-panel/user-panel.styl
+++ b/app/common/components/user-panel/user-panel.styl
@@ -24,6 +24,7 @@
         .user-info-logo
             font-family AwesomeIcon
             padding-right 5px
+            color secondary-action-color
 
     .log-out
         rounded-icon-button()
