--- a/app/common/styles/color-palette.styl
+++ b/app/common/styles/color-palette.styl
@@ -11,3 +11,5 @@ background-blue-3 = lodash-blue
 secondary-action-color = #a2dcf9
 secondary-action-border-color = #4fbff7
 secondary-action-background-color = rgba(110, 207, 255, .26)
+
+main-text = #f8d940
