--- a/app/game/game-styles.styl
+++ b/app/game/game-styles.styl
@@ -12,6 +12,19 @@ html
         width 100%
         height 5vh
 
+    .game-progress
+        .progress-bar
+            background main-text
+
+        .round-mark-container
+            .-past
+                color main-text
+                border .15em solid alpha(background-blue-0, .5)
+            .-current
+                color main-text
+            .-future
+                color secondary-action-color
+
     .code-box, .code-editor
         margin 5px
 
