--- a/app/game/game-styles.styl
+++ b/app/game/game-styles.styl
@@ -8,11 +8,16 @@ html
 .game-view
     font-family Helvetica, 'Helvetica Neue', Arial
 
+    .view-content
+        padding 0 2vw
+
     .user-panel
         width 100%
         height 5vh
 
     .game-progress
+        margin-top -.25vh
+
         .progress-bar
             background main-text
 
@@ -25,6 +30,17 @@ html
             .-future
                 color secondary-action-color
 
+    .round-header
+        display flex
+        justify-content space-between
+        align-items center
+        margin-bottom 1vh
+
+    .round-name
+        color main-text
+        font-size 150%
+        font-weight bold
+
     .timer
         .time-text
             color main-text
@@ -36,21 +52,5 @@ html
             .circle-remaining
                 stroke main-text
 
-    .code-box, .code-editor
-        margin 5px
-
-    .puzzle, .editor
-        display flex
-        justify-content center
-
-        & div:nth-child(1)
-            width 60%
-
-            .CodeMirror
-                width 100%
-
-        & div:nth-child(2)
-            width 30%
-
-            .CodeMirror
-                width 100%
+    .game-task
+        margin-bottom 1vh
