--- a/app/game/game-styles.styl
+++ b/app/game/game-styles.styl
@@ -1,4 +1,5 @@
 @import '~common/styles/color-palette.styl'
+@import '~common/styles/code-colors.styl'
 
 html
     min-height 100%
@@ -57,9 +58,15 @@ html
             .circle-remaining
                 stroke main-text
 
-    .game-task
-        margin-bottom 1vh
+    .game-task, .placeholder.countdown
         flex 1.3
+
+    .placeholder.countdown
+        background alpha(theme-background, .75)
+        border-radius 3px
+        font-size 250px
 
     .game-input
         flex 1
+        margin-top 1vh
+
