--- a/app/landing/landing-styles.styl
+++ b/app/landing/landing-styles.styl
@@ -18,11 +18,12 @@ html
 
     .logo-container
         background holy-white
-        padding 2vw
+        padding 2vw 2vw 1vw 2vw
         box-shadow 0 0 .7em #000
 
         .qd-chars
             font-size 600%
+            margin-bottom 1vw
 
         .lodash-underlogo
             background lodash-blue
