input disabling implementation

--- a/app/common/styles/code-theme.styl
+++ b/app/common/styles/code-theme.styl
@@ -10,6 +10,7 @@
     div
         &.CodeMirror-selected
             background selection
+
     .CodeMirror-gutters
         background theme-background
         border-radius 3px
@@ -66,4 +67,4 @@
     background line
 
 .cm-s-lodash span.cm-property, .cm-s-lodash span.cm-attribute
-    color property
+    color atom
