[#51] Align to left;

--- a/app/game/components/code-editor/code-editor.styl
+++ b/app/game/components/code-editor/code-editor.styl
@@ -14,10 +14,8 @@
         color atom
         padding 4px 5px
         background selection
-        &.start
+        &.start, &.end
             align-self flex-start
-        &.end
-            align-self flex-end
 
 .code-editor.readonly
     background readonly
